# h5n1-capstone

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_SKETCH.md  Dockerfile  README.md  pyproject.toml
h5n1/: __init__.py  dates.py  db.py
h5n1/clean/: __init__.py
h5n1/features/: __init__.py  migration_pressure.py
h5n1/models/: __init__.py
h5n1/sentiment/: core.py
h5n1/sources/: __init__.py  census.py  census_adjacency.py  fips_crosswalk.py  migration.py  noaa.py  usda.py
infra/: branch-protection.json  gcp_bootstrap.sh
ingest/: README.md
manifests/: README.md
modal_jobs/: README.md
notebooks/: README.md
sql/: 001_dimensions.sql  002_facts.sql  003_feature_view.sql  004_county_adjacency.sql  005_wild_bird_detections.sql  006_migration_geometry.sql  007_migration_pressure.sql  run_migrations.py  seed_dimensions.py  seed_migration.py
tests/: test_smoke.py
