[project]
name = "h5n1-capstone"
version = "0.1.0"
description = "Social-media early-warning signals for H5N1 avian influenza outbreaks (Harvard MDS capstone)."
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=17.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "google-cloud-storage>=2.18",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "tenacity>=9.0",
]

[project.optional-dependencies]
# Heavy ML stack — only needed for the sentiment/modeling phase. Keeps the
# ingestion image lean. Install with: uv sync --extra ml
ml = [
    "torch>=2.4",
    "transformers>=4.44",
    "sentencepiece>=0.2",
    "accelerate>=0.34",
]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["h5n1"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
